--- a/lib/localization/app_el.arb
+++ b/lib/localization/app_el.arb
@@ -154,5 +154,6 @@
   "useProxy": "Χρήση διαμεσολαβητή",
   "userPlaylists": "Λίστες αναπαραγωγής χρήστη",
   "yes": "Ναι",
-  "youtubePlaylistLinkOrId": "YouTube playlist link or ID "
+  "youtubePlaylistLinkOrId": "YouTube playlist link or ID ",
+  "random": "random"
 }
