--- a/lib/localization/app_et.arb
+++ b/lib/localization/app_et.arb
@@ -154,5 +154,6 @@
   "useProxy": "Kasuta proksit",
   "userPlaylists": "Kasutaja nimekirjad",
   "yes": "Yes",
-  "youtubePlaylistLinkOrId": "YouTube'i nimekirja link või ID"
+  "youtubePlaylistLinkOrId": "YouTube'i nimekirja link või ID",
+  "random": "random"
 }
