--- a/lib/localization/app_hi.arb
+++ b/lib/localization/app_hi.arb
@@ -154,5 +154,6 @@
   "useProxy": "Use proxy",
   "userPlaylists": "उपयोगकर्ता की प्लेलिस्ट्स",
   "yes": "Yes",
-  "youtubePlaylistLinkOrId": "YouTube प्लेलिस्ट लिंक या ID"
+  "youtubePlaylistLinkOrId": "YouTube प्लेलिस्ट लिंक या ID",
+  "random": "random"
 }
