--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -154,5 +154,6 @@
   "useProxy": "Use proxy",
   "userPlaylists": "User playlists",
   "yes": "Yes",
-  "youtubePlaylistLinkOrId": "YouTube playlist link or ID"
+  "youtubePlaylistLinkOrId": "YouTube playlist link or ID",
+  "random": "random"
 }
