--- a/lib/localization/app_ko.arb
+++ b/lib/localization/app_ko.arb
@@ -154,5 +154,6 @@
   "useProxy": "프록시 사용",
   "userPlaylists": "사용자 재생목록",
   "yes": "Yes",
-  "youtubePlaylistLinkOrId": "유튜브 재생목록 링크 또는 ID "
+  "youtubePlaylistLinkOrId": "유튜브 재생목록 링크 또는 ID ",
+  "random": "random"
 }
