Fix bug when add song from custom. Fix refresh playlist in Library.

--- a/lib/localization/app_ar.arb
+++ b/lib/localization/app_ar.arb
@@ -155,5 +155,5 @@
   "userPlaylists": "قوائم تشغيل المستخدم",
   "yes": "نعم",
   "youtubePlaylistLinkOrId": "YouTube playlist link or ID ",
-  "random": "random"
+  "random": "Random"
 }
