--- a/lib/localization/app_de.arb
+++ b/lib/localization/app_de.arb
@@ -155,5 +155,5 @@
   "userPlaylists": "Deine Playlists",
   "yes": "Ja",
   "youtubePlaylistLinkOrId": "Youtube-Playlist-Link oder ID einer Youtube-Playlist",
-  "random": "random"
+  "random": "Random"
 }
