--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -155,5 +155,5 @@
   "userPlaylists": "User playlists",
   "yes": "Yes",
   "youtubePlaylistLinkOrId": "YouTube playlist link or ID",
-  "random": "random"
+  "random": "Random"
 }
