--- a/lib/localization/app_he.arb
+++ b/lib/localization/app_he.arb
@@ -155,5 +155,5 @@
   "userPlaylists": "רשימות השמעה של המשתמש",
   "yes": "Yes",
   "youtubePlaylistLinkOrId": "קישור או מזהה של רשימת השמעה מיוטיוב",
-  "random": "random"
+  "random": "Random"
 }
