--- a/lib/localization/app_hi.arb
+++ b/lib/localization/app_hi.arb
@@ -155,5 +155,5 @@
   "userPlaylists": "उपयोगकर्ता की प्लेलिस्ट्स",
   "yes": "Yes",
   "youtubePlaylistLinkOrId": "YouTube प्लेलिस्ट लिंक या ID",
-  "random": "random"
+  "random": "Random"
 }
