--- a/lib/localization/app_it.arb
+++ b/lib/localization/app_it.arb
@@ -155,5 +155,5 @@
   "userPlaylists": "Playlist utente",
   "yes": "Yes",
   "youtubePlaylistLinkOrId": "YouTube playlist link o ID",
-  "random": "random"
+  "random": "Random"
 }
