--- a/lib/localization/app_el.arb
+++ b/lib/localization/app_el.arb
@@ -155,5 +155,5 @@
   "userPlaylists": "Λίστες αναπαραγωγής χρήστη",
   "yes": "Ναι",
   "youtubePlaylistLinkOrId": "YouTube playlist link or ID ",
-  "random": "random"
+  "random": "Random"
 }
