--- a/lib/localization/app_es.arb
+++ b/lib/localization/app_es.arb
@@ -155,5 +155,5 @@
   "userPlaylists": "Listas de reproducción del usuario",
   "yes": "Si",
   "youtubePlaylistLinkOrId": "Enlace o ID de lista de reproducción de YouTube",
-  "random": "random"
+  "random": "Random"
 }
