--- a/lib/localization/app_et.arb
+++ b/lib/localization/app_et.arb
@@ -155,5 +155,5 @@
   "userPlaylists": "Kasutaja nimekirjad",
   "yes": "Yes",
   "youtubePlaylistLinkOrId": "YouTube'i nimekirja link või ID",
-  "random": "random"
+  "random": "Random"
 }
