--- a/lib/localization/app_fr.arb
+++ b/lib/localization/app_fr.arb
@@ -155,5 +155,5 @@
   "userPlaylists": "Playlists des Utilisateurs",
   "yes": "Oui",
   "youtubePlaylistLinkOrId": "Lien ou identifiant de la playlist YouTube",
-  "random": "random"
+  "random": "Random"
 }
