--- a/lib/localization/app_hu.arb
+++ b/lib/localization/app_hu.arb
@@ -155,5 +155,5 @@
   "userPlaylists": "Felhasználói lejátszási listák",
   "yes": "Yes",
   "youtubePlaylistLinkOrId": "YouTube lejátszási lista vagy azonosító",
-  "random": "random"
+  "random": "Random"
 }
