--- a/lib/localization/app_id.arb
+++ b/lib/localization/app_id.arb
@@ -155,5 +155,5 @@
   "userPlaylists": "Playlist pengguna",
   "yes": "Yes",
   "youtubePlaylistLinkOrId": "Tautan atau ID playlist YouTube",
-  "random": "random"
+  "random": "Random"
 }
