--- a/lib/localization/app_ja.arb
+++ b/lib/localization/app_ja.arb
@@ -155,5 +155,5 @@
   "userPlaylists": "再生リスト",
   "yes": "Yes",
   "youtubePlaylistLinkOrId": "YouTube 再生リストのリンクかID ",
-  "random": "random"
+  "random": "Random"
 }
