--- a/lib/localization/app_ko.arb
+++ b/lib/localization/app_ko.arb
@@ -155,5 +155,5 @@
   "userPlaylists": "사용자 재생목록",
   "yes": "Yes",
   "youtubePlaylistLinkOrId": "유튜브 재생목록 링크 또는 ID ",
-  "random": "random"
+  "random": "Random"
 }
